# lotto-csbme

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/schemas/: README.md
frontend/: .gitignore
src/backend/: app.py  config.py  db_models.py  game.py  lottoschein.py  spiel.py  statistik.py
src/frontend/public/: index.html
src/frontend/src/: App.css  App.js  types.js
src/frontend/src/pages/: GamePage.js  LandingPage.js  LoginPage.js  MainPage.js  NotFound.js  RegisterPage.js
tests/unit-tests/: dummy.py
