[project]
name = "lotto-csbme"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Alexandr Zhukov", email = "alexandr.zhukov@csbme.de"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
